# Solana-Price-Prediction

./: README.md
anchor_project/price-prediction-market/: .gitignore  Anchor.toml
anchor_project/price-prediction-market/programs/price-prediction-market/: Cargo.toml
anchor_project/price-prediction-market/programs/price-prediction-market/src/: lib.rs  lib.txt  note.txt
anchor_project/price-prediction-market/tests/: price-prediction-market.ts
frontend/dapp-scaffold-main/: package.json
frontend/dapp-scaffold-main/src/components/: AppBar.tsx  Footer.tsx  PredictionMarket.tsx  price_prediction_market.json  price_prediction_market.ts
frontend/dapp-scaffold-main/src/pages/: index.tsx
frontend/dapp-scaffold-main/src/views/basics/: index.tsx
